<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>frequency_monitoring</name>
  <version>1.0.0</version>
  <description>
    For monitoring live the frequency of processes
  </description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pybind11_vendor</depend>
  <depend>shared_memory</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
